--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skrape-js",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A TypeScript library for easily interacting with Skrape.ai",
   "repository": {
     "url": "https://github.com/jenslys/skrape-js"
@@ -14,15 +14,10 @@
     "build": "tsc",
     "test": "jest",
     "prepare": "npm run build",
-    "dev:test": "ts-node src/test.ts"
+    "dev:test": "ts-node -r dotenv/config src/test.ts"
   },
-  "keywords": [
-    "scraping",
-    "typescript",
-    "zod"
-  ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "peerDependencies": {
     "zod": "^3.0.0"
   },
@@ -34,6 +29,7 @@
     "@types/jest": "^29.0.0",
     "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "dotenv": "^16.3.1"
   }
 }
