--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "tsc",
     "test": "jest",
     "prepare": "npm run build",
-    "dev:test": "ts-node -r dotenv/config src/test.ts"
+    "dev:test": "ts-node -r dotenv/config src/test.ts",
+    "dev": "ts-node -r dotenv/config src/dev.ts"
   },
   "author": "",
   "license": "MIT",
