--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,20 +13,20 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: "20.x"
+          bun-version: latest
           registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install
 
       - name: Build
-        run: npm run build
+        run: bun run build
 
       - name: Run tests
-        run: npm test
+        run: bun test
 
       - name: Check version change
         id: check
@@ -40,6 +40,6 @@ jobs:
 
       - name: Publish to npm
         if: steps.check.outputs.version_changed == 'true'
-        run: npm publish --access public
+        run: bun publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
