--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skrape-js",
-  "version": "1.0.4",
-  "description": "A TypeScript library for easily interacting with Skrape.ai",
+  "version": "1.0.5",
+  "description": "TypeScript/Node.js SDK for the Skrape.ai API with type-safe schema validation",
   "repository": {
     "url": "https://github.com/jenslys/skrape-js"
   },
